# ChangeLog for catalyst
# Copyright 1999-2010 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
  Fix typo and add armv7a-hardfp target

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
  targets/support/pre-kmerge.sh:
  Apply patch from Guy Martin <gmsoft@gentoo.org> to fix installcd for hppa,
  gentoo bug #317423

  29 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Only run depclean for stage3/system

  28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  This is catalyst 2.0.6.906

  28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Run depclean at the end of stage generation (for Gentoo bug #295132)

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh:
  Apply patch from Gentoo bug #284585

  02 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Clean up a few extraneous spaces, line wrap a comment, and add Id.

  02 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS,
  +.gitattributes, README, TODO:
  Adding .gitattributes and adding an Id variable to AUTHORS, ChangeLog,
  README, and TODO.

  23 Aug 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/livecd_stage2_target.py:
  Apply patch for module blacklisting from gentoo bug #282148

  07 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Version bumping to 2.0.6.905 for release.

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> livecd/files/README.txt,
  livecd/files/x86-F6.msg:
  Apply patch to document espeakup support for Gentoo bug #267708

  27 May 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  import catalyst_support for Gentoo bug #271368

  24 Apr 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst: