@@ -3,6 +3,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  05 Sep 2010; Raúl Porcel <armin76@gentoo.org>
+  modules/generic_stage_target.py:
+  Restore old behaviour on the CXXFLAGS variable on the created make.conf
+
   04 Sep 2010; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
   Fix typo and add armv7a-hardfp target
 
